udpkg (0.020) UNRELEASED; urgency=low

  * Petter Reinholdtsen
    - Report arch 'sparc' instead of 'sparc64' on UltraSparc.
      Patch from Thomas Poindessous. (Closes: #227851)

 -- Petter Reinholdtsen <pere@debian.org>  Thu, 22 Jan 2004 17:54:44 +0100

udpkg (0.019) unstable; urgency=low

  * Thiemo Seufer
    - Add CFLAGS for warnings and space optimization.
  * Joey Hess
    - Use architecture "powerpc" for ppc64, patch from Anton Blanchard.

 -- Joey Hess <joeyh@debian.org>  Mon, 22 Dec 2003 14:41:14 -0500

udpkg (0.018) unstable; urgency=low

  * Don't use di_exec_shell_log for -f, because it has undefined behvaior
    that does not include printing out what dpkg is supported to print
    out. This should un-break the floppy retreiver.

 -- Joey Hess <joeyh@debian.org>  Sun,  2 Nov 2003 02:24:46 -0500

udpkg (0.017) unstable; urgency=low

  * Karsten Merker
    - fix mipsel architecture detection for "udpkg --print-architecture"
      (udpkg wrongly reported "mips" instead of "mipsel" on mipsel systems)

 -- Karsten Merker <merker@debian.org>  Sat, 1 Nov 2003 22:15:03 +0100

udpkg (0.016) unstable; urgency=low

  * Matt Kraai
    - Check the return values of commands (closes: #197922).
    - Use di_exec_shell_log instead of system.

 -- Petter Reinholdtsen <pere@debian.org>  Sun, 19 Oct 2003 17:47:02 +0200

udpkg (0.015) unstable; urgency=low

  * Move to Standards-Version 3.6.0, converting changelog to UTF-8
  * Sebastian Ley
    - Really output nothing if setting UDPKG_QUIET
    - Pass the exitcode of postinst scripts when they fail

 -- Petter Reinholdtsen <pere@debian.org>  Sun, 28 Sep 2003 14:47:30 +0200

udpkg (0.014) unstable; urgency=low

  * Bastian Blank
    - add "exec" to the configure calls, ash isn't able to optimize the fork
      away if it should execute only one command
  * Tollef Fog Heen
    - Add powerpc to xlattbl (closes: #194933)
  * Petter Reinholdtsen
    - Add myself as uploader.
